update tmux deprecations

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -15,7 +15,7 @@ setw -g window-status-current-format ''
 set -g mouse on
 
 #bind-key z suspend-client
-bind \ split-window -h
+bind \\ split-window -h
 bind - split-window -v
 
 # act like vim
